hard-gists/1871929/run.log
=== Docker Run Log for 1871929 ===
Started at: Mi 29. Okt 12:32:03 CET 2025

[2025-10-29 12:32:04] START: Running container for 1871929
[2025-10-29 12:32:04] SUCCESS: Container ff8321cdcae93db767b2ae424da148d64fbe9cda7eb9c94c33efa0b650211568 started for 1871929
=== Container logs for 1871929 ===
  File "/snippet.py", line 63
    print "infinite attractor"
    ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 1871929 ===
[2025-10-29 12:32:06] INFO: Container ff8321cdcae93db767b2ae424da148d64fbe9cda7eb9c94c33efa0b650211568 has stopped
